--- a/index.html
+++ b/index.html
@@ -48,10 +48,4 @@ h1 {
 /* --- Table styling --- */
 .group-content {
   padding: 0;
-  overflow-x: auto;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  table-layout: fixed; /* keeps column widths*
+  overflow-x: au
